syntax = "proto2";

package domain;

/**
 * @Indexed
 */
message Person {

  /**
   * @Keyword(projectable=true, sortable=true, normalizer="lowercase", indexNullAs="unnamed", norms=false)
   */
  optional string firstName = 1;

  /**
   * @Keyword(projectable=true, sortable=true, normalizer="lowercase", indexNullAs="unnamed", norms=false)
   */
  optional string lastName = 2;

  /**
   * @Basic
   */
  optional int32 bornYear = 3 [default = -1];

  /**
   * @Keyword(projectable=true, sortable=true, normalizer="lowercase", indexNullAs="unnamed", norms=false)
   */
  optional string bornIn = 4;
}
